--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -10,7 +10,9 @@ body {
             
         }
         .login-container {
-            background-color: #fff;
+           	
+            backdrop-filter: blur(50px); 
+    		background : transparent;
             padding: 20px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
